@@ -5,6 +5,8 @@ ats-lang-anairiats-0.2.3:
 1. Adding READ: READ(string) is read-only!
 2. Renaming prelude/?ATS/file.?ats to prelude/?ATS/filebas.?ats
 3. Adding support -DATS flags: -DATSXYZ=12345 or -DATS XYZ=12345
+4. Adding support for ATS/Anairiats to output #line pragma in the C code
+   its generates
 
 ########################################################################
 
